start functionality for show 1 recipe, not working

--- a/src/app/recipe/index/index.component.html
+++ b/src/app/recipe/index/index.component.html
@@ -11,7 +11,7 @@
 
 <ul *ngFor="let recipe of recipes; let i = index">
     <li>
-        <a (click)="goToRecipe()"> {{ recipe.label }} </a>
+        <a routerLink="/detail/{{ recipe.id }}"> {{ recipe.label }} </a>
     </li>
     <li>
         {{ recipe.ingredientLines[i] }}
