--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,1 +1,4 @@
-<p>recipe-details works!</p>
+<div *ngIf="recipe">
+    <h1> {{ recipe.label }} </h1>
+    <img src="{{ recipe.image }}" alt="">
+</div>
