--- a/src/app/recipe/index/index.component.html
+++ b/src/app/recipe/index/index.component.html
@@ -1,3 +1,7 @@
+<div class="alert alert-primary" role="alert">
+    This is a primary alert—check it out!
+</div>
+
 <input type="text" name="inputValue" [(ngModel)]="inputValue">
 
 <div *ngFor="let allergen of allergens">
