show all ingedients in recipe

--- a/src/app/recipe/index/index.component.html
+++ b/src/app/recipe/index/index.component.html
@@ -17,8 +17,10 @@
     <li>
         <a routerLink="/detail/{{ recipe.id }}"> {{ recipe.label }} </a>
     </li>
-    <li>
-        {{ recipe.ingredientLines[i] }}
-    </li>
+    <div *ngFor="let ingredient of recipe.ingredientLines">
+        <li>
+            {{ ingredient }}
+        </li>
+    </div>
     <img src="{{ recipe.image }}" alt="">
 </ul>
