--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
                 <span *ngIf="passwordControl.errors['minlength']">Password must have at least 8 characters</span>
             </div>
         </div>
-        <button (click)="login()" class="w-100 btn btn-lg btn-primary" type="submit"
-            [disabled]="this.loginForm.invalid">Sign in</button>
+        <button type="button" (click)="login()" class="w-100 btn btn-lg btn-primary" [disabled]="loginForm.invalid">Sign
+            in</button>
     </form>
 </main>
