--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" routerLink="recipe">Search recipes</a>
-    <button class="navbar-toggler" type="button">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+        (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [ngbCollapse]="isCollapsed">
         <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" routerLink="profile" *ngIf=isloggedIn()>My Recipes</a>
-            <a class="nav-item nav-link" routerLink="login" *ngIf=!isloggedIn()>Login</a>
-            <a class="nav-item nav-link" routerLink="signup" *ngIf=!isloggedIn()>Register</a>
-            <a class="nav-item nav-link " href="" (click)="logout()" *ngIf=isloggedIn()>Logout</a>
+            <a class="nav-item nav-link active" routerLink="profile" *ngIf=loggedIn>My Profile</a>
+            <a class="nav-item nav-link" routerLink="login" *ngIf=!loggedIn>Login</a>
+            <a class="nav-item nav-link" routerLink="signup" *ngIf=!loggedIn>Register</a>
+            <a class="nav-item nav-link " href="" (click)="logout()" *ngIf=loggedIn>Logout</a>
         </div>
     </div>
 </nav>
