--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="isloggedIn()">
-
-    <p>hej</p>
-</div>
 
 <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
     <label for="title">Title</label>
@@ -9,6 +5,11 @@
     <button type="submit">Skapa ny lista</button>
 </form>
 
-<div *ngFor="let list of lists">
-    <h4>{{ list.title }}</h4>
+<div class="d-flex flex-row" *ngFor="let list of lists">
+    <div>
+        <h4>{{ list.title }}</h4>
+    </div>
+    <div>
+        <button (click)="deleteList(list.id)" class="alert alert-danger">X</button>
+    </div>
 </div>
