--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,3 @@
-
 <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
     <label for="title">Title</label>
     <input type="text" class="form-control" name="title" [(ngModel)]="form.title" required #title="ngModel" />
@@ -7,9 +6,10 @@
 
 <div class="d-flex flex-row" *ngFor="let list of lists">
     <div>
-        <h4>{{ list.title }}</h4>
+        <a [routerLink]="['list', list.id]">{{ list.title }}</a>
     </div>
     <div>
         <button (click)="deleteList(list.id)" class="alert alert-danger">X</button>
     </div>
+
 </div>
