--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,9 +1,17 @@
-<div>
-    <h1>{{ list.title }}</h1>
-</div>
+<div class="d-flex flex-column align-items-center">
+    <div class="mb-5">
+        <h1 class="white">{{ list.title }}</h1>
+    </div>
 
+    <div class="d-flex flex-row flex-wrap align-items-center">
+        <div class="recipe-card" *ngFor="let recipe of recipes">
+            <div class="d-flex flex-row justify-content-around">
+                <h4 routerLink="/detail/{{ recipe.SELFREF }}"> {{ recipe.title }}</h4>
+                <button (click)="removeRecipe(recipe.id)" class="alert alert-danger">X</button>
+            </div>
 
-<div *ngFor="let recipe of recipes">
-    <h4> {{ recipe.title }}</h4>
-    <button (click)="removeRecipe(recipe.id)" class="alert alert-danger">X</button>
-</div>
+            <img routerLink="/detail/{{ recipe.SELFREF }}" src="{{ recipe.image }}" alt="">
+
+        </div>
+
+    </div>
