--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,15 +1,23 @@
-<form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
-    <label for="title">Title</label>
-    <input type="text" class="form-control" name="title" [(ngModel)]="form.title" required #title="ngModel" />
-    <button type="submit">Skapa ny lista</button>
-</form>
+<div class="mt-3 d-flex justify-content-center">
+    <form class="d-flex flex-column justify-content-center" name="form" (ngSubmit)="f.form.valid && onSubmit()"
+        #f="ngForm">
+        <div>
+            <label class="white" for="title">Title</label>
+            <input type="text" class="form-control" name="title" [(ngModel)]="form.title" required #title="ngModel" />
+        </div>
+        <button class="btn btn-primary" type="submit">Create new list</button>
+    </form>
+</div>
 
-<div class="d-flex flex-row" *ngFor="let list of lists">
-    <div>
-        <a [routerLink]="['list', list.id]">{{ list.title }}</a>
-    </div>
-    <div>
-        <button (click)="deleteList(list.id)" class="alert alert-danger">X</button>
-    </div>
+<div class="mt-5 d-flex flex-column align-items-center">
+    <h1 class="white">Your Lists</h1>
+    <div class="d-flex flex-row justify-content-between lists w-50" *ngFor="let list of lists">
+        <div class="list-recipe">
+            <a [routerLink]="['list', list.id]">{{ list.title }}</a>
+        </div>
+        <div>
+            <button (click)="deleteList(list.id)" class="alert alert-danger">X</button>
+        </div>
 
+    </div>
 </div>
