--- a/src/app/recipe/index/index.component.css
+++ b/src/app/recipe/index/index.component.css
@@ -1,17 +1,39 @@
-.margin-top{
-    margin-top: 5vh;
+.recipe-card{
+display:flex;
+flex-direction: column;
+align-items: center;
+height:auto;
+border-radius: 10px;
+width: 20em;
+margin: 15px;
+padding:25px 30px;
+background-color: rgb(163, 206, 241);
 }
 
-.w100{
+.recipe-card img{
     width: 100%;
+    height: 100%;
+    cursor: pointer;
 }
 
-img {
-    width:  30vw;
-    height: 50vh;
-    object-fit: cover;
+
+.flex-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    height:auto;
+    width: 75%;
+    margin:0 auto;
+    border-radius: 10px;
 }
 
-.l-100{
-    width: 30vw;
+.white{
+    color:white;
+ 
+}
+
+.title{
+    text-decoration: none;
+    cursor: pointer;
 }
